<resources>
    <string name="welcome_title">Привет</string>
    <string name="welcome_subtitle">Добро Пожаловать</string>
    <string name="welcome_text">Войти как</string>
    <string name="login_button">Вход</string>
    <string name="signup_button">Регистрация</string>
    <string name="guest_button">Войти как гость</string>
    <string name="continue_as_guest">Продолжить как гость</string>
    <string name="login_title">С Возвращением</string>
    <string name="login_hello">Ввойдите в свой аккаунт</string>
    <string name="login_email">Почта</string>
    <string name="login_password">Пароль</string>
    <string name="login_login">Войти</string>
    <string name="login_anonimus">Войти как гость</string>
    <string name="login_text">Нет аккаунта?</string>
    <string name="login_redirect">Зарегистрироваться</string>
    <string name="no_internet_connection">Нет интернет-соединения</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="login_success">Вход успешен!</string>
    <string name="login_error">Ошибка входа</string>
    <string name="invalid_email_or_password">Неверный email или пароль</string>
    <string name="reauth_required">Необходимо войти заного</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="auth_failed">Ошибка</string>
    <string name="reg_title">Зарегистрируйтесь</string>
    <string name="reg_name">Имя пользователя</string>
    <string name="reg_mail">Email</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_confirm">Подтвердите пароль</string>
    <string name="reg_reg">Зарегистрироваться</string>
    <string name="reg_text">Уже есть аккаунт?</string>
    <string name="reg_redirect">Войти</string>
    <string name="password_length_error">Пароль должен быть от 6 до 12 символов</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="username_format_error">Никнейм может содержать только буквы, цифры и подчеркивание</string>
    <string name="username_length_error">Никнейм должен быть от 3 до 20 символов</string>
    <string name="username_taken">Этот никнейм уже занят</string>
    <string name="username_check_error">Ошибка проверки никнейма</string>
    <string name="registration_success">Регистрация успешна!</string>
    <string name="username_reservation_error">Ошибка резервирования никнейма</string>
    <string name="user_data_save_error">Ошибка сохранения данных пользователя</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="weak_password_error">Слабый пароль. Пароль должен быть не менее 6 символов.</string>
    <string name="invalid_email_error">Некорректный email.</string>
    <string name="email_exists_error">Пользователь с таким email уже существует.</string>
    <string name="menu_1">Тренировка</string>
    <string name="menu_2">Статистика</string>
    <string name="menu_3">Настройки</string>
    <string name="menu_achievements">Достижения</string>
    <string name="main_timer">30</string>
    <string name="main_clickme">Нажмите сюда, чтобы начать</string>
    <string name="main_again">Заново</string>
    <string name="tap_to_start">Нажмите сюда</string>
    <string name="time_remaining">Осталось: %d</string>
    <string name="timer_default">Таймер: 30</string>
    <string name="anonymous">Аноним</string>
    <string name="guest">Гость</string>
    <string name="chars_per_min">%d зн./мин</string>
    <string name="accuracy_percent">%.1f%%</string>
    <string name="game_results">Результаты игры</string>
    <string name="speed_format">%d зн/мин</string>
    <string name="accuracy_format">%.1f%%</string>
    <string name="ok">OK</string>
    <string name="level_reached">Уровень %d достигнут!</string>
    <string name="level_progress">%d%% до следующего уровня</string>
    <string name="level_format">Уровень %d (%d%%)</string>
    <string name="level_placeholder">Уровень: %d</string>
    <string name="detail_title">Детали игры</string>
    <string name="detail_speed">Скорость:</string>
    <string name="detail_accuracy">Точность:</string>
    <string name="detail_errors">Ошибки:</string>
    <string name="detail_text">Текст игры:</string>
    <string name="detail_ok">OK</string>
    <string name="detail_delete">Удалить</string>
    <string name="no_text_available">Текст игры недоступен</string>
    <string name="text_not_available">Текст недоступен</string>
    <string name="delete_record_title">Удаление записи</string>
    <string name="delete_record_message">Вы уверены, что хотите удалить эту запись? Это действие нельзя отменить.</string>
    <string name="delete">Удалить</string>
    <string name="record_deleted_success">Запись удалена</string>
    <string name="record_deleted_error">Ошибка при удалении: %s</string>
    <string name="stat_search">Поиск</string>
    <string name="stat_sort">Сортировка:</string>
    <string name="stat_date">Дата</string>
    <string name="stat_score">Очки</string>
    <string name="statistics_title">Статистика</string>
    <string name="user_section_title">Пользователь</string>
    <string name="stats_section_title">Статистика</string>
    <string name="text_section_title">Текст</string>
    <string name="delete_section_title">Удаление игры</string>
    <string name="detail_delete_hint">Безвозвратное действие</string>
    <string name="game">Игра</string>
    <string name="you">Вы</string>
    <string name="stats_anonymous_title">Статистика недоступна</string>
    <string name="stats_anonymous_message">Для просмотра статистики необходимо войти в аккаунт</string>
    <string name="premium_title">Премиум подписка</string>
    <string name="premium_text">Для доступа к просмотру статистики необходимо приобрести подписку</string>
    <string name="premiun_buy">Купить подписку - 199₽/мес</string>
    <string name="premiun_cancel">Продолжить без подписки</string>
    <string name="achievements_title">Мои достижения</string>
    <string name="achievement_beginner">Новичок</string>
    <string name="achievement_beginner_desc">Пройдите первую тренировку</string>
    <string name="achievement_pro">Профи</string>
    <string name="achievement_pro_desc">Наберите 1000 символов без ошибок</string>
    <string name="achievement_speedster">Скорострел</string>
    <string name="achievement_speedster_desc">Достигните скорости 200 зн./мин</string>
    <string name="achievement_accuracy">Точность</string>
    <string name="achievement_accuracy_desc">Достигните точности 95%</string>
    <string name="achievement_marathon">Марафонец</string>
    <string name="achievement_marathon_desc">Пройдите 10 тренировок</string>
    <string name="achievement_saved">Достижение разблокировано: %s</string>
    <string name="achievement_error">Ошибка сохранения достижения</string>
    <string name="achievement_progress">%d%%</string>
    <string name="achievements_anonymous_title">Достижения недоступны</string>
    <string name="achievements_anonymous_message">Для просмотра достижений необходимо войти в аккаунт</string>
    <string name="achievement_unlocked">Достижение разблокировано!</string>
    <string name="achievement_master">Мастер клавиатуры</string>
    <string name="achievement_master_desc">Набрать 1,000,000 символов</string>
    <string name="achievement_lightning">Скорость света</string>
    <string name="achievement_lightning_desc">Достичь скорости 500 символов в минуту</string>
    <string name="achievement_sniper">Снайпер</string>
    <string name="achievement_sniper_desc">Достичь точности 99%</string>
    <string name="achievement_legend">Легенда</string>
    <string name="achievement_legend_desc">Завершить 1000 тренировочных сессий</string>
    <string name="achievement_flawless">Безошибочный</string>
    <string name="achievement_flawless_desc">Завершить сессию без единой ошибки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_account_title">Настройки аккаунта</string>
    <string name="settings_account">Настройка аккаунта</string>
    <string name="settings_account_text">Информация / Смена имени</string>
    <string name="settings_account_exit">Выйти</string>
    <string name="settings_main_title">Основные</string>
    <string name="settings_main_game">Настройка игры</string>
    <string name="settings_main_game_text">Смена сложности / Курсор / Таймер</string>
    <string name="settings_main_ui">Внешний вид</string>
    <string name="settings_main_ui_text">Светлая / Тёмная / Системная</string>
    <string name="settings_main_language">Смена языка</string>
    <string name="settings_main_language_text">Русский / Английский</string>
    <string name="settings_main_info">О приложении</string>
    <string name="settings_main_info_text">Версия 1.0</string>
    <string name="theme_title">Тема</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_system">Системная</string>
    <string name="theme_system_hint">Меняется в зависимости от настроек системы</string>
    <string name="language_title">Язык</string>
    <string name="language_russian">Русский</string>
    <string name="language_english">Английский</string>
    <string name="timer_title">Таймер</string>
    <string name="timer_digit">Цифровой</string>
    <string name="timer_digit_hint">Стандартный таймер с цифрами</string>
    <string name="timer_bar">Прогресс</string>
    <string name="timer_bar_hint">Убывающая со временем полоса</string>
    <string name="timer_combine">Комбинированный</string>
    <string name="timer_combine_hint">Совмещенный с цифровым и прогрессивным</string>
    <string name="cursor_title">Курсор</string>
    <string name="cursor_underline">Нижняя черта</string>
    <string name="cursor_vertical">Вертикальная черта</string>
    <string name="cursor_block">Закрашенный блок</string>
    <string name="game_title">Настройка игры</string>
    <string name="game_game_title">Игровой процесс</string>
    <string name="game_game">Сложность игры</string>
    <string name="game_game_text">Легко / Нормально / Сложно</string>
    <string name="game_ui_title">Элементы интерфейса</string>
    <string name="game_ui_cursor">Курсор</string>
    <string name="game_ui_cursor_text">Нижний / Вертикальный / Блок</string>
    <string name="game_ui_timer">Таймер</string>
    <string name="game_ui_timer_text">Цифровой / Прогресс / Комбинированный</string>
    <string name="difficult_title">Сложность</string>
    <string name="difficult_easy">Легко</string>
    <string name="difficult_easy_hint">45 секунд / Простые слова и предложения</string>
    <string name="difficult_normal">Нормально</string>
    <string name="difficult_normal_hint">30 секунд / Слова средней сложности</string>
    <string name="difficult_hard">Сложно</string>
    <string name="difficult_hard_hint">20 секунд / Cложные технические термины</string>
    <string name="account_title">Настройка аккаунта</string>
    <string name="account_hint">Основные настройки</string>
    <string name="account_mail">Сменить почту</string>
    <string name="account_mail_hint">Почтовый адресс</string>
    <string name="account_password">Сменить пароль</string>
    <string name="account_password_hint">Новый пароль и его подтверждение</string>
    <string name="account_name">Сменить имя пользователя</string>
    <string name="account_name_hint">Отображаемое имя</string>
    <string name="account_delete">Удалить аккаунт</string>
    <string name="save_changes">Сохранить</string>
    <string name="name_title">Изменение имени</string>
    <string name="name_text">Ваше имя</string>
    <string name="name_change_restriction_title">Изменение имени</string>
    <string name="name_change_restriction_message">Чтобы изменить имя, войдите в аккаунт или зарегистрируйтесь</string>
    <string name="app_name">Keyboard Trainer</string>
</resources>